# reef-artifacts

./: .gitignore  CMakeLists.txt  README.md  env.sh
evaluation/: Makefile
evaluation/fig1/: 0.json  1.json  2.json  4.json  8.json  fig1a.plt  fig1b.plt  fig1c.plt  fig1d.plt  generate.py
evaluation/fig10/: A.json  B.json  C.json  D.json  E.json  fig10a.plt  fig10b.plt  generate.py
evaluation/fig11/: Makefile  fig11a.plt  fig11b.plt  generate.py
evaluation/fig12/: fig12a.plt  generate.py  preempt-scale.eps
evaluation/fig13/: fig13a.plt  fig13b.plt  generate.py
evaluation/fig14/: fig14a.plt  fig14b.plt  generate.py
evaluation/fig15/: fig15a.plt  fig15b.plt  generate.py
evaluation/fig16/: fig16a.plt  generate.py
evaluation/fig17/: fig17a.plt  generate.py
reef-env/: README.md
reef-env/amdgpu-dkms/: update-kern-module.sh
reef-env/amdgpu-dkms/amdgpu-4.3-52/: Makefile
reef-env/amdgpu-dkms/amdgpu-4.3-52/amd/amdkfd/: kfd_chardev.c  kfd_device_queue_manager.c  kfd_device_queue_manager.h
reef-env/amdgpu-dkms/amdgpu-4.3-52/amd/dkms/: aclocal.m4  configure  dkms.conf  post-install.sh  post-remove.sh
reef-env/amdgpu-dkms/amdgpu-4.3-52/amd/dkms/config/: config.h.in
reef-env/amdgpu-dkms/amdgpu-4.3-52/include/uapi/linux/: kfd_ioctl.h
reef-env/hip/include/hip/: hip_runtime_api.h
reef-env/hip/include/hip/amd_detail/: hip_runtime_api.h
reef-env/hip/rocclr/: hip_global.cpp  hip_hcc.def.in  hip_hcc.map.in  hip_internal.hpp  hip_module.cpp  hip_stream.cpp
reef-env/hip/tests/src/runtimeApi/stream/: hipStreamGetFlags.cpp
reef-env/rocclr/: CMakeLists.txt
reef-env/rocclr/device/: device.hpp
reef-env/rocclr/device/rocm/: rocdevice.cpp  rocvirtual.cpp  rocvirtual.hpp
reef-env/rocclr/platform/: command.cpp  commandqueue.cpp  commandqueue.hpp
reef-env/rocclr/utils/: concurrent.hpp
resource/: Makefile
resource/alexnet/: alexnet.pointer.cu  alexnet.preempt.cu  alexnet.ptropt.cu
resource/bench_kernel/: bench_kernel.be.cu  bench_kernel.cu  bench_kernel.json  bench_kernel.pointer.cu  bench_kernel.preempt.cu  bench_kernel.profile.json  bench_kernel.ptropt.cu  bench_kernel.trans.cu
resource/bert/: bert.pointer.cu  bert.preempt.cu  bert.ptropt.cu
resource/densenet/: densenet.pointer.cu  densenet.preempt.cu  densenet.ptropt.cu
resource/inception/: inception.pointer.cu  inception.preempt.cu  inception.ptropt.cu
resource/mobilenet/: mobilenet.pointer.cu  mobilenet.preempt.cu  mobilenet.ptropt.cu
resource/mocked_kernel/: mocked_kernel.be.cu  mocked_kernel.cu  mocked_kernel.pointer.cu  mocked_kernel.preempt.cu  mocked_kernel.ptropt.cu  mocked_kernel.ptrraw.cu  mocked_kernel.trans.cu
resource/resnet/: resnet.pointer.cu  resnet.preempt.cu  resnet.ptropt.cu
resource/resnet152/: resnet152.preempt.cu  resnet152.ptropt.cu
resource/resnet18/: resnet18.pointer.cu  resnet18.preempt.cu  resnet18.prtopt.cu
resource/vgg/: vgg.pointer.cu  vgg.preempt.cu  vgg.ptropt.cu
script/: default_pointer.py  find_op_log.py  overhead.py  pointer_baseline.py  pointer_opt.py  preemptable_kernel.py  sort_latency.py  sort_profile.py
src/eval/: DISB.cpp  DISB.h  DNN-preempt.cpp  dkp.cpp  kernel_size.cpp  micro.cpp  overall.cpp  pointer.cpp  preemption.cpp  queue_size.cpp  reef_bench.cpp  reef_bench.h  stream.cpp  throughput.cpp  tradeoff.cpp
src/reef/client/: client.cpp  client.h
src/reef/executor/cuda/: cuda_impl.cpp  cuda_impl.h
src/reef/rpc/: reef.grpc.pb.cc  reef.grpc.pb.h  reef.pb.cc  reef.pb.h
src/reef/server/: scheduler.cpp
